--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <strong>BOY<br>SUGIJAKKO</strong>
                 </div>
                 <div class="contactButton">
-                    <a href="#contactScroll">
+                    <a href="CV.pdf">
                     <div>
-                        CONTACT ME
+                        DOWNLOAD CV
                     </div>
                     </a>
                 </div>
