--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
                 <div class="about">
                     <div>
-                        <img src="Selfie.png" width="170px" height="170px">
+                        <img src="selfie.png" width="170px" height="170px">
                     </div>
     
                     <div>
