--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="firstSection">
             <div class="navContainer">
                 <nav>
-                    <strong class="title">PORTOFOLIO</strong>
+                    <strong class="title">PORTFOLIO</strong>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="#projectScroll">PROJECTS</a></li>
@@ -25,7 +25,7 @@
 
             <div class="name">
                 <div>
-                    <strong>BOY<br>SUGIJAKKO</strong>
+                    <h2><strong>BOY<br>SUGIJAKKO</strong></h2>
                 </div>
                 <div class="contactButton">
                     <a href="CV.pdf">
@@ -53,7 +53,9 @@
                     </div>
     
                     <div>
-                        An individual with 2+ years of experience working, developing, and maintaining web applications used in a renowned world class university as a system analyst. Keen in learning new things and eager to share that knowledge with others. Capable of performing well both individually and as part of a team. A committed, hard worker, responsible, loyal, and always have passion in the work done.
+                        <h3>
+                            A dedicated, hard working, responsible, and loyal individual with 2+ years of experience working, developing, and maintaining web applications as a system analyst in a renowned world class university. Interested in learning new things and eager to share what they've learned with others. Capable of excelling both individually and as a member of a team.
+                        </h3>
                     </div>
                 </div>
         </div>
@@ -87,7 +89,7 @@
                                 the player tries to hit the nail as much as they can, the game will be over as soon as the player fails to
                                 hit the nail. I created this game to learn more about unity, game making, and game designing. This game
                                 is created with Unity Engine.<br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Basics skills of unity<br>
                                 - Basics of C#<br>
                                 - Planning a project<br>
@@ -112,7 +114,7 @@
                                     there is a penguin that you have to take care and play with. There is a money system where player earn
                                     money by interacting with the penguin, and the money can be used to buy food for the penguin.I created
                                     this game to learn how to design and code a game. This game is coded in C#.<br><br>
-                                    What I have learned:<br>
+                                    Applied skills:<br>
                                     - Basic skills of unity
                                     - Basics of C#<br>
                                     - Planning a project<br>
@@ -129,7 +131,7 @@
                                 Ciak is a website that provides list of popular and recommended places to eat in several cities. The list
                                 can be filtered by city. I created this website to practice and learn the basics of HTML, CSS, and
                                 JavaScript.<br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Basics of HTML<br>
                                 - Basics of CSS<br>
                                 - Basics of JavaScript<br>
@@ -154,7 +156,7 @@
                                 “Bandarmologi”. Before using the application, the user must first download the data required from a
                                 specific application using the script available. After downloading the data, the user could then input
                                 commands to Bandarmologi-bot to use the application.<br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Basics of python<br>
                                 - Basics of data manipulation<br>
                                 - Basics of macro and scripting<br>
@@ -170,7 +172,7 @@
                                 STOCKS4U is a website designed to aid in the analysis of stock data. The website was initially hosted on a cloud service provider before being moved to a self-hosted raspberry pi server. 
                                 Several features of the website includes: 15 minutes stocks data delay, automated analysis, stocks recommendation, monthly subscription with payment gateway, charting support, and admin panel.
                                 <br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Django <br>
                                 - Celery <br>
                                 - Networking <br>
@@ -199,7 +201,7 @@
                                 Hosting several services on a self managed Raspberry Pi. Using VPN service to access local services and using tunneling services to open local services to public network.
                                 Hosted services: Jellyfin, Radarr, Sonarr, SnippetBox, KASM, Dashy, Glances, Code Server, Grafana, and Guacamole
                                 <br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Portainer <br>
                                 - Docker Container <br>
                                 - VPN <br>
@@ -213,7 +215,7 @@
                                 Custom keyboard case designed using Fusion360. The material to build the custom keyboard case are stainless steel and acrylic. 
                                 The CAD design was sent to a service provider to be cut using laser cutting technology.
                                 <br><br>
-                                What I have learned:<br>
+                                Applied skills:<br>
                                 - Fusion360 <br>
                                 - CAD design <br>
                             </div>
